<resources>
    <string name="app_name">WIlly Wonka</string>
    <string name="title">Willy Wonka Quiz</string>
    <string name="question1">1) Which Candy bars were used in the movie? (select 2)</string>
    <string name="question2">2) How many people lived in Charlie Bucket\'s home?</string>
    <string name="question3">3) What job did Charlie hold that allowed him to buy bread for his family?</string>
    <string name="question4">4) What instrument does Wonka use to summon the Oompa Loompas?</string>
    <string name="question5">5) What actor played Willy Wonka in the classic 1971 film?</string>
    <string name="question6">6) What was Charlie\'s Grandfather\'s name?</string>
    <string name="answerA"> Washed Laundry</string>
    <string name="answerB">Sold Candy</string>
    <string name="answerC">Delivered Newspapers</string>
    <string name="answerD">Picked Up Garbage</string>
    <string name="scrum">Scrumpdiddlyumtious Bar</string>
    <string name="skrunch">Skrunch Bar</string>
    <string name="wonkaB">Wonka Bar</string>
    <string name="oompaB">Peanut Butter Oompa Bar</string>
    <string name="frank">Frank</string>
    <string name="joe">Joe</string>
    <string name="flute">Flute</string>
    <string name="saxophone">Saxophone</string>
    <string name="drum">Drum</string>
    <string name="cowbell">Cowbell</string>
</resources>
